perk overflow resolved

--- a/src/App.css
+++ b/src/App.css
@@ -1064,7 +1064,7 @@ h4.navbarItems:hover {
   .perks .perk-heading .top-up,
   .perks .perk-heading .redefine {
     width: 290px;
-    height: 400px;
+    height: 460px;
     font-size: 0.86em;
     word-spacing: 0%;
     padding: 16px 16px 16px 16px;
@@ -1413,7 +1413,7 @@ h4.navbarItems:hover {
   .perks .perk-heading .top-up,
   .perks .perk-heading .redefine {
     width: 290px;
-    height: 400px;
+    height: 420px;
     font-size: 0.84em;
     word-spacing: 0%;
     padding: 16px 16px 16px 16px;
@@ -1723,7 +1723,7 @@ h4.navbarItems:hover {
   .perks .perk-heading .top-up,
   .perks .perk-heading .redefine {
     width: 260px;
-    height: 290px;
+    height: 330px;
     padding: 20px 10px;
   }
 
@@ -2087,7 +2087,7 @@ h4.navbarItems:hover {
     position: relative;
     right: 100px;
     width: 270px;
-    height: 295px;
+    height: 340px;
     padding: 20px;
   }
 
@@ -2546,7 +2546,7 @@ h4.navbarItems:hover {
     margin: 1px 1px 1px 1px;
     padding: 1px 1px 1px 1px;
     width: 270px;
-    height: 320px;
+    height: 330px;
     padding: 20px;
   }
 
@@ -3011,7 +3011,7 @@ h4.navbarItems:hover {
     margin: 1px 1px 1px 1px;
     padding: 1px 1px 1px 1px;
     width: 270px;
-    height: 320px;
+    height: 330px;
     padding: 20px;
   }
 
